--- a/themes/icarus/languages/ja.yml
+++ b/themes/icarus/languages/ja.yml
@@ -35,10 +35,10 @@ article:
         one: '約%d語'
         other: '約%d語'
     licensing:
-        author: 'Author'
-        created_at: 'Posted on'
-        updated_at: 'Updated on'
-        licensed_under: 'Licensed under'
+        author: '作者'
+        created_at: '投稿日'
+        updated_at: '更新日'
+        licensed_under: 'ライセンス'
 donate:
     title: 'この記事は気に入りましたか？ 著者をサポートする'
     afdian: 'Afdian.net'
